option java_package = "watchedepisodes.servlets.protocols";
option java_outer_classname = "GetAllEpisodesProtocol";

import "protocol_types.proto";

message GetAllEpisodesResponse {
	repeated PBEpisode episodes = 1;
}